# NgenOrca

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  check_out.txt  check_out2.txt  check_out3.txt  clippy_fix.txt  clippy_mfix.txt  clippy_out.txt  clippy_out2.txt  clippy_output3.txt  config_test_output.txt  deny.toml  docker-compose.nas.yml  docker-compose.yml  full_workspace_test_output.txt  gateway_regress.txt  gateway_runtime_identity_test_output.txt  gateway_test_exit2.txt  gateway_test_output.txt  gateway_test_output2.txt  gateway_test_output3.txt  orch_test_output.txt  plugin_sdk_test_output.txt  sandbox_regress.txt  sandbox_test_output3.txt  test_final.txt  test_gateway_delegation.txt  test_gateway_learned_diagnostics_phase.txt  test_gateway_sandbox_phase.txt  test_gateway_synthesis_phase.txt  test_gateway_verification_phase.txt  test_identity_gateway_integration.txt  test_identity_gateway_lib.txt  (+8 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: config.example.toml
crates/ngenorca-bus/: Cargo.toml
crates/ngenorca-bus/src/: event_log.rs  lib.rs  subscriber.rs
crates/ngenorca-cli/: Cargo.toml
crates/ngenorca-cli/src/: main.rs
crates/ngenorca-config/: Cargo.toml
crates/ngenorca-config/src/: lib.rs
crates/ngenorca-core/: Cargo.toml
crates/ngenorca-core/src/: error.rs  event.rs  identity.rs  lib.rs  message.rs  orchestration.rs  plugin.rs  session.rs  types.rs
crates/ngenorca-gateway/: Cargo.toml
crates/ngenorca-gateway/src/: auth.rs  config_ui.rs  lib.rs  metrics.rs  plugins.rs  rate_limit.rs  request_id.rs  routes.rs  runtime_identity.rs  server.rs  sessions.rs  skills.rs  state.rs  tools.rs
crates/ngenorca-gateway/src/channels/: discord.rs  matrix.rs  mod.rs  signal.rs  slack.rs  teams.rs  telegram.rs  webchat.rs  whatsapp.rs
crates/ngenorca-gateway/src/orchestration/: classifier.rs  learned.rs  mod.rs  orchestrator.rs  quality.rs
crates/ngenorca-gateway/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs  registry.rs  retry.rs
crates/ngenorca-gateway/tests/: integration.rs
crates/ngenorca-identity/: Cargo.toml
crates/ngenorca-identity/src/: fingerprint.rs  lib.rs  resolver.rs  store.rs
crates/ngenorca-memory/: Cargo.toml
crates/ngenorca-memory/src/: episodic.rs  lib.rs  semantic.rs  working.rs
crates/ngenorca-plugin-sdk/: Cargo.toml
crates/ngenorca-plugin-sdk/src/: lib.rs
crates/ngenorca-sandbox/: Cargo.toml
crates/ngenorca-sandbox/src/: lib.rs
crates/ngenorca-whatsapp-web/: Cargo.toml
crates/ngenorca-whatsapp-web/src/: auth.rs  binary.rs  client.rs  crypto.rs  lib.rs  noise.rs  proto.rs  signal.rs  store.rs  transport.rs
deploy/nginx/: ngenorca.conf
docs/: CONFIGURATION_GUIDE.md  DEPLOYMENT_SECURITY.md  DOCKER.md  ENTERPRISE_ARCHITECTURE_DIAGRAMS.md  ENTERPRISE_READINESS_CHECKLIST.md  EXECUTION_ROADMAP.md  NAS_DEPLOYMENT.md  OPENCLAW_GAP_ANALYSIS.md  OPENCLAW_PARITY_STATUS.md  PORTAINER.md
scripts/: update.ps1  update.sh
tmp/: commit_msg.txt  pr_body.md  targeted_ci_fix_tests.txt
