[package]
name = "ngenorca-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Composable configuration system with fragment merging"

[dependencies]
ngenorca-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
