[package]
name = "ngenorca-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error definitions shared across all NgenOrca crates"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
