[package]
name = "ngenorca-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket + HTTP gateway — the control plane that ties everything together"

[dependencies]
ngenorca-core = { workspace = true }
ngenorca-bus = { workspace = true }
ngenorca-config = { workspace = true }
ngenorca-identity = { workspace = true }
ngenorca-memory = { workspace = true }
ngenorca-plugin-sdk = { workspace = true }
ngenorca-sandbox = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
urlencoding = { workspace = true }
ngenorca-whatsapp-web = { workspace = true }
subtle = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
jsonwebtoken = { workspace = true }
