[package]
name = "ngenorca-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware-bound identity system with TPM/Secure Enclave attestation and cross-channel unification"

[dependencies]
ngenorca-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
