[package]
name = "ngenorca-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware-bound identity system with TPM/Secure Enclave attestation and cross-channel unification"

[features]
default = []
## Enable Windows TPM 2.0 integration via CNG Platform Crypto Provider.
tpm = ["windows"]
## Enable macOS Secure Enclave integration via Security.framework.
secure-enclave = ["security-framework"]

[dependencies]
ngenorca-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Security_Cryptography"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", optional = true }
