[package]
name = "ngenorca-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Three-tier memory system: working (context window), episodic (conversation history + embeddings), semantic (distilled knowledge)"

[dependencies]
ngenorca-core = { workspace = true }
ngenorca-bus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
