[package]
name = "ngenorca-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed plugin SDK with lifecycle hooks, capability negotiation, and versioned API"

[dependencies]
ngenorca-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
