[package]
name = "ngenorca-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-adaptive sandbox abstraction — Windows Job Objects, Linux seccomp/landlock, container detection"

[dependencies]
ngenorca-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
] }

[dev-dependencies]
serde_json = { workspace = true }
