[package]
name = "ngenorca-whatsapp-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust WhatsApp Web multi-device client"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true, features = ["native-tls"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }

# Crypto — Noise Protocol (XX pattern)
aes-gcm = { workspace = true }
sha2 = { workspace = true }

# Crypto — Signal Protocol
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }

# Identity / encoding
base64 = { workspace = true }
uuid = { workspace = true }

# QR code
qrcode = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
